--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
@@ -18,14 +18,17 @@
         <!--合同主体-->
         <div>
             <p>
-                为保障质权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障质权人权利的实现，抵押人愿意以其合法所有的财产为质权人设定质权，出质人、质权人依照我国有关法律、法规，经协商一致，订立本合同。
+                为保障质权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障质权人权利的实现，出质人愿意以其合法所有或有权处分的动产或权利作质押。为明确双方权利义务，出质人与质权人经协商一致，特订立本合同。
             </p>
             <p><strong>第一条 出质标的</strong></p>
             <p>1.1出质人提供的质押财产是：<strong><u>{{ counter_property_type }}</u></strong>（以下称“质物”）。</p>
-            <p>1.2质押财产的详细情况以本合同所附“质物清单”为准。</p>
-            <p>1.3质押权的效力及于质物及其从物、从权利、附着物、附合物、加工物、孳息及代位物，股权质押的包括但不限于申请质押登记数量的股权及该股权在质押登记有效期内的送股（含公积金转增股）、派息、现金红利等。</p>
+            <p>1.2质押财产的详细情况以本合同所附“质物清单”为准，与本合同具有同等法律效力。</p>
+            <p>“质物清单”对质物价值的约定，不作为质权人处分该质物时的估价依据，不对质权人行使职权构成任何限制</p>
+            <p>1.3质押权的效力及于质物及其从物、从权利、附着物、附合物、加工物、孳息、代位物以及因质物毁损、灭失、或被征收而产生的保险金、赔偿金、补偿金。股权质押的包括但不限于申请质押登记数量的股权及该股权在质押登记有效期内的送股（含公积金转增股）、派息、现金红利等。</p>
             <p>1.4出质人保证对质物依法享有所有权或处分权，并保证质物不存在任何权属争议、被查封、被扣押、已出租等情况。</p>
-            <p>1.5（如有共有人）共有人均同意以质物为主合同项下债权提供质押担保，并接受本合同约束。</p>
+            <p>1.5质押权存续期间，质押人应当维护质押物的完好，不得采用非合理方式使用质押物而使其价值减损。质押权人有权随时检查质押物的使用管理情况。</p>
+            <p>1.6质押人的行为足以使质押物价值减少的，应立即停止其行为；造成质押物价值减少时，有义务恢复质押物的价值，或提供与减少的价值相当的担保。</p>
+            <p>1.7（如有共有人）共有人均同意以质物为主合同项下债权提供质押担保，并接受本合同约束。</p>
             <p>共有人：<strong><u>
 {#                {% if co_owner_list %}#}
 {#                    {% for co_owner in co_owner_list %}#}
@@ -44,7 +47,7 @@
             <p><strong>第二条 担保的主债权及担保范围</strong></p>
             <p>2.1质押担保的主债权为债权人依据其与债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}签订的主合同（名称：<strong><u>{{ agree_obj.get_agree_name_display }}</u></strong>，编号：<strong><u>{{ agree_obj.agree_num }}</u></strong>）而享有的对债务人的债权。</p>
             <p>主债权的金额和期限依主合同之约定。</p>
-            {% comment %} <p>2.2出质人担保的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和实现债权的费用（包括但不限于诉讼费、财产保全费、执行费、仲裁费、律师费、差旅费、保险费、评估费、拍卖费、公告费、质押登记费、质物处置费、过户费、其他费用）以及其他所有主合同债务人的应付费用。</p> {% endcomment %}
+            <p>2.2出质人担保的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和实现债权的费用（包括但不限于诉讼费、财产保全费、财产保全担保费、执行费、仲裁费、律师费、差旅费、保险费、评估费、拍卖费、公告费、质押登记费、质物处置费、过户费、其他费用）以及其他所有主合同债务人的应付费用。</p>
             <p>2.3<strong>当主合同债务人未按主合同约定按时清偿本合同担保范围内债务时，无论质权人对主合同项下的债权是否拥有其它担保或放弃、变更其他担保权或担保权顺位，且无论其他担保是否有主合同债务人自己所提供，质权人均有权直接要求出质人以质物在其担保范围内承担担保责任。</strong></p>
             <p>2.4根据《中华人民共和国担保法》第五条的规定，本合同双方特别约定如下：</p>
             <p><strong>本合同效力独立于主合同，主合同或其有关条款无效不影响本合同的效力。对主合同债务人在主合同无效后应承担的返还责任或赔偿责任，出质人应承担连带责任。</strong></p>
@@ -71,11 +74,12 @@
             <p>⑨如果保险公司支付的赔偿费不足以重建、修复受损的资产或者清偿贷款，出质人有义务重建或修复质物使其恢复受损前价值；质权人对不足清偿部分，有权向出质人追偿；</p>
             <p><strong>第五条 出质人的陈述与保证</strong></p>
             <p>5.1 出质人具有完全的权利和能力签订本合同。</p>
-            <p>企业或者其他组织出质人依法注册成立，所有必要的政府机构的批准都已获得且是充分的、有效的，将质物向质权人作质押之事宜已经出质人董事会或股东会（股东大会）等权力机构的有效决议确认并同意。</p>
-            <p>5.2本合同条款是出质人真实意思的表示，对出质人具有法律约束力。</p>
+            <p>企业或者其他组织出质人依法注册成立，所有必要的政府机构的批准都已获得且是充分的、有效的，将质物向质权人作质押之事宜已经出质人董事会或股东会（股东大会）等权力机构的有效决议确认并同意。如为上市公司或上市公司控股子公司，保证按照《证券法》、《证券交易所上市规则》等法律、法规和规章的要求及时就该担保事项履行信息披露义务。</p>
+            <p>自然人出质人是具有完全民事权利能力和完全民事行为能力的自然人，具有法律规定的担保人资格和代为清偿的能力，自愿承担并履行担保责任。</p>
+            <p>5.2本合同条款是出质人真实意思的表示，对出质人具有法律约束力。出质人是质物的所有权人或者国家授权的经营管理者，质物不存在所有权、使用权或经营管理权方面的争议。在本合同签订前未对合同项下质物做出过包括担保物权、馈赠或转让在内的任何处分。</p>
             <p>5.3出质人同意质押额度的有效期届满日不超过质权到期日，以多份质押权利进行质押的以到期日最近的质押权利确定质押期限。质押额度不超过出质人提供的质押权利票面价值的90%。</p>
             <p>5.4出质人根据本合同的担保行为不会导致违反任何其作为一方与他人签署的合同、协议或其单方面做出的承诺书、保证书等。本合同的执行将不会与出质人必须遵守的法律相抵触。</p>
-            <p>5.5出质人在谈判、签署和履行本合同过程中向质权人提供的情况和资料在所有方面是真实的、准确的、全面的，没有遗漏任何可能导致误解的实质性事实或内容。</p>
+            <p>5.5出质人在谈判、签署和履行本合同过程中向质权人提供的情况和资料在所有方面是真实的、准确的、全面的，没有遗漏任何可能导致误解的实质性事实或内容。出质人接受质权人对其生产经营活动和财务活动的检查、监督，并随时根据质权人要求提供反映出质人经营情况及资信情况的财务报告、财务报表及其他资料。</p>
             <p>5.6除了在本合同经各方签署以前书面通知质权人的以外，出质人在任何法院、仲裁机构或政府行政机关不存在任何悬而未决的或出质人知道可能发生的针对或牵连其自身并影响其履行本合同能力的诉讼、仲裁、执行、申诉、复议等程序及其他事件或情况。</p>
             <p>5.7在出质人所知或可预见的范围内，不存在任何没有向质权人书面披露的可以影响其履行本合同能力的事实。</p>
             <p>5.8除了在本合同签署以前书面通知质权人以外，出质人就其作为一方当事人与他人签署的任何合同或协议（包括本合同）或单方面做出的承诺书、保证书，未出现任何影响其在本合同项下履行能力的违约事件。</p>
@@ -105,10 +109,10 @@
             <p>6.12在主合同债务人向质权人清偿主合同项下全部债务之前，出质人不向主合同债务人或其他担保人行使因履行本合同所享有的追偿权。</p>
             <p>6.13出质人应协助质权人实现质权并不会设置任何障碍。</p>
             <p>6.14出质人同意，质权人也有权为本合同订立和履行之目的，通过中国人民银行信用信息基础数据库和其他依法设立的信用数据库查询出质人的相关信息，以决定是否接受出质人提供的担保。质权人亦可依据有关法律、法规、规范性文件的规定或金融监管机构的要求，将有关本合同的信息和其他相关信息提供给中国人民银行信用信息基础数据库或其他依法设立的信用数据库。</p>
-            <p>6.14抵押人应承担本合同项下有关抵押物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
             <p>6.15出质人应承担本合同项下有关质物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
-            <p>6.16在出质人得知发生或很可能发生本合同和主合同规定的违约或抗辩事由以后立即通知质权人，并不时地向质权人提供质权人合理要求的情况、资料。</p>
-            <p>6.17 主合同债务人出现任何违约行为，包括但不限于擅自改变贷款用途等，不对出质人构成任何影响，出质人仍应按照本合同承担担保责任。</p>
+            <p>6.16出质人应承担本合同项下有关质物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
+            <p>6.17在出质人得知发生或很可能发生本合同和主合同规定的违约或抗辩事由以后立即通知质权人，并不时地向质权人提供质权人合理要求的情况、资料。</p>
+            <p>6.18主合同债务人出现任何违约行为，包括但不限于擅自改变贷款用途等，不对出质人构成任何影响，出质人仍应按照本合同承担担保责任。</p>
             <p><strong>第七条 质权的实现</strong></p>
             <p>7.1下列情形出现，质权人有权立即行使质权，且要求其对损害予以赔偿，处分质物所需一切合理费用由出质人承担：</p>
             <p>（1）主合同债务人违约或出现主合同项下任何不安抗辩事件或权利的产生，包括但不限于主合同债务履行期限届满之日质权人未受清偿或法律、法规规定或主合同的约定或者主合同双方协议任一主合同债务提前到期而质权人未受清偿的；</p>
