--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
@@ -42,7 +42,7 @@
             </u></strong>
                 （签字）</p>
             <p><strong>第二条 担保的主债权及担保范围</strong></p>
-            <p>2.1抵押担保的主债权为主合同项下贷款本金（大写）人民币<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}元</u>）；<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰（千分之<u>{{ agree_rate_cn_q }}</u>）</strong>；贷款期限为<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止（若主合同约定的《借款凭证》记载的贷款起始日期、到期日期与本起始日期、到期日期不一致的，以《借款凭证》的记载为准），共<u><strong>{{ agree_term_str }}</strong></u>个月零<u><strong>/</strong></u>天。</p>
+            <p>2.1抵押担保的主债权为主合同项下贷款本金（大写）人民币<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}元</u>）；<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰（千分之<u>{{ agree_rate_cn_q }}</u>）</strong>；贷款期限为<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止（若主合同约定的《借款凭证》记载的贷款起始日期、到期日期与本起始日期、到期日期不一致的，以《借款凭证》的记载为准），共<u><strong>{{ credit_term_cn }}{{ agree_obj.get_agree_term_typ_display }}</strong></u>。</p>
             <p>2.2抵押权的存续期间至被担保的主债权诉讼时效届满之日止。</p>
             <p>2.3抵押人担保的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和实现债权的费用（包括但不限于诉讼费、财产保全费、执行费、仲裁费、律师费、差旅费、保险费、评估费、拍卖费、公告费、抵押物处置费、过户费、其他费用）以及其他所有主合同债务人的应付费用。</p>
             <p>2.4<strong>当主合同债务人未按主合同约定按时清偿本合同担保范围内债务时，无论抵押权人对主合同项下的债权是否拥有其它担保或放弃、变更其他担保权或担保权顺位，且无论其他担保是否有主合同债务人自己所提供，抵押权人均有权直接要求抵押人以抵押物在其担保范围内承担担保责任。</strong></p>
