--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
@@ -23,7 +23,7 @@
             <p><strong>第一条 出质标的</strong></p>
             <p>1.1出质人提供的质押财产是：<strong><u>{{ counter_property_type }}</u></strong>（以下称“质物”）。</p>
             <p>1.2质押财产的详细情况以本合同所附“质物清单”为准，与本合同具有同等法律效力。</p>
-            <p>“质物清单”对质物价值的约定，不作为质权人处分该质物时的估价依据，不对质权人行使职权构成任何限制</p>
+            <p>“质物清单”对质物价值的约定，不作为质权人处分该质物时的估价依据，不对质权人行使职权构成任何限制。</p>
             <p>1.3质押权的效力及于质物及其从物、从权利、附着物、附合物、加工物、孳息、代位物以及因质物毁损、灭失、或被征收而产生的保险金、赔偿金、补偿金。股权质押的包括但不限于申请质押登记数量的股权及该股权在质押登记有效期内的送股（含公积金转增股）、派息、现金红利等。</p>
             <p>1.4出质人保证对质物依法享有所有权或处分权，并保证质物不存在任何权属争议、被查封、被扣押、已出租等情况。</p>
             <p>1.5质押权存续期间，质押人应当维护质押物的完好，不得采用非合理方式使用质押物而使其价值减损。质押权人有权随时检查质押物的使用管理情况。</p>
@@ -63,7 +63,7 @@
             <p>（1）无须对质物购买财产保险；</p>
             <p>若质物原已办有财产损失险，则出现质物赔付事故后保险人对出质人的赔付金优先抵偿给质权人；若质物的价值减损或者有减损可能，应质权人要求须购买保险。</p>
             <p>（2）对质物向质权人认可的保险公司投保各种合适的保险，并达到如下要求：</p>
-            <p>①保出质人应按质权人的要求为质物投保，保险金额不低于主合同项下债权本息，保险期限不短于主合同项下债务履行期限，并应指定质权人为保险权益的第一受益人；</p>
+            <p>①出质人应按质权人的要求为质物投保，保险金额不低于主合同项下债权本息，保险期限不短于主合同项下债务履行期限，并应指定质权人为保险权益的第一受益人；</p>
             <p>②保险手续办妥后，出质人应将保单正本交质权人保管；</p>
             <p>③在本合同有效期内，出质人应按时支付所有保费，并履行维持保险的有效存续所必需的其他义务；</p>
             <p>④出质人未能投保或续保的，质权人有权自行投保、续保，代为缴付保费或采取其他保险维持措施。出质人应提供必要协助，并承担质权人因此支出的保险费用和相关费用；</p>
@@ -110,9 +110,8 @@
             <p>6.13出质人应协助质权人实现质权并不会设置任何障碍。</p>
             <p>6.14出质人同意，质权人也有权为本合同订立和履行之目的，通过中国人民银行信用信息基础数据库和其他依法设立的信用数据库查询出质人的相关信息，以决定是否接受出质人提供的担保。质权人亦可依据有关法律、法规、规范性文件的规定或金融监管机构的要求，将有关本合同的信息和其他相关信息提供给中国人民银行信用信息基础数据库或其他依法设立的信用数据库。</p>
             <p>6.15出质人应承担本合同项下有关质物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
-            <p>6.16出质人应承担本合同项下有关质物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
-            <p>6.17在出质人得知发生或很可能发生本合同和主合同规定的违约或抗辩事由以后立即通知质权人，并不时地向质权人提供质权人合理要求的情况、资料。</p>
-            <p>6.18主合同债务人出现任何违约行为，包括但不限于擅自改变贷款用途等，不对出质人构成任何影响，出质人仍应按照本合同承担担保责任。</p>
+            <p>6.16在出质人得知发生或很可能发生本合同和主合同规定的违约或抗辩事由以后立即通知质权人，并不时地向质权人提供质权人合理要求的情况、资料。</p>
+            <p>6.17主合同债务人出现任何违约行为，包括但不限于擅自改变贷款用途等，不对出质人构成任何影响，出质人仍应按照本合同承担担保责任。</p>
             <p><strong>第七条 质权的实现</strong></p>
             <p>7.1下列情形出现，质权人有权立即行使质权，且要求其对损害予以赔偿，处分质物所需一切合理费用由出质人承担：</p>
             <p>（1）主合同债务人违约或出现主合同项下任何不安抗辩事件或权利的产生，包括但不限于主合同债务履行期限届满之日质权人未受清偿或法律、法规规定或主合同的约定或者主合同双方协议任一主合同债务提前到期而质权人未受清偿的；</p>
