--- a/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
+++ b/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
@@ -32,7 +32,7 @@
     {% if rate_b %}
         <p>2、按以下约定执行：按照担保总额的<strong><u>{{ single_quota_rate }}%</u></strong>收取。</p>
     {% else %}
-        <p>4）按以下约定执行：<strong><u>{{ single_quota_rate }}</u></strong></p>
+        <p>2、按以下约定执行：<strong><u>{{ single_quota_rate }}</u></strong></p>
     {% endif %}
     <p>（二）具体数额：按以下第<strong><u>2</u></strong>项执行：</p>
     <p>1、一次收取担保费金额为：人民币<u>&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp</u>万元。</p>
