--- a/A_dbms/templates/dbms/provide/notify_show/dbd.html
+++ b/A_dbms/templates/dbms/provide/notify_show/dbd.html
@@ -58,7 +58,11 @@
         </td>
     </tr>
     <tr>
-        <td class="bb" colspan="4">业务分管领导意见：<br><br><br><br><br>
+        <td class="bb" colspan="4">财务复核意见：<br><br><br><br>
+        </td>
+    </tr>
+    <tr>
+        <td class="bb" colspan="4">业务分管领导意见：<br><br><br><br>
         </td>
     </tr>
     <tr>
