--- a/A_dbms/templates/dbms/provide/notify_show/fdd.html
+++ b/A_dbms/templates/dbms/provide/notify_show/fdd.html
@@ -34,14 +34,17 @@
         </td>
     </tr>
     <tr>
-        <td class="bb" colspan="6">放款岗意见：<br><br><br><br><br>
+        <td class="bb" colspan="6">放款岗意见：<br><br><br><br>
         </td>
     </tr>
     <tr>
-        <td class="bb" colspan="6">风控部负责人意见：<br><br><br><br><br>
+        <td class="bb" colspan="6">风控部负责人意见：<br><br><br><br>
         </td>
     </tr>
-
+    <tr>
+        <td class="bb" colspan="6">财务复核意见：<br><br><br><br>
+        </td>
+    </tr>
     <tr>
         <td class="bb" colspan="6">公司业务分管领导意见：<br><br><br><br><br>
         </td>
