--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-31.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-31.html
@@ -8,7 +8,7 @@
     <tr>
         <td align="center">质押权利名称</td>
         <td colspan="2" align="center">票据编号</td>
-        <td align="center">票面金额</td>
+        <td align="center">票面金额(元)</td>
         <td align="center">出票日期</td>
         <td align="center">到期日</td>
         <td align="center">承兑人</td>
